tests/config/max_pages_zero.stderr
error[E0080]: evaluation of `<InvalidConfig as idr_ebr::config::ConfigPrivate>::ENSURE_VALID` failed
 --> src/config.rs
  |
  |         assert!(Self::MAX_PAGES > 0);
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'assertion failed: Self::MAX_PAGES > 0', $DIR/src/config.rs:75:9
  |
  = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

note: the above error was encountered while instantiating `fn idr_ebr::Idr::<u64, InvalidConfig>::new`
 --> tests/config/max_pages_zero.rs:9:13
  |
9 |     let _ = Idr::<u64, InvalidConfig>::new();
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
